hey commited this

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div class="heading">
 <h2 >The code Element</h2>
 <p>Programming code example:</p>
-</div>
+	</div>
 
-
+	<h1>added this heading</h1>
 </body>
 </html>
